--- a/classes/lux.struct.Queue.html
+++ b/classes/lux.struct.Queue.html
@@ -153,6 +153,12 @@
                             some.lua
                           </a>
                         </li>
+                        <li
+                          >
+                          <a href="../examples/some51.lua.html">
+                            some51.lua
+                          </a>
+                        </li>
                     </ul>
                   </li>
             </ul>
@@ -278,9 +284,9 @@
 
                 <dl class="function">
                     <dt>
-                      <a name = "obj:isEmpty"></a>
+                      <a name = "lux.struct.Queue:isEmpty"></a>
                       <h3 class="text-primary">
-                        obj:isEmpty&nbsp;()
+                        lux.struct.Queue:isEmpty&nbsp;()
                       </h3>
                     </dt>
                     <dd>
@@ -305,9 +311,9 @@
                     </dd>
                     <div class="row" style="height:2em"></div>
                     <dt>
-                      <a name = "obj:isFull"></a>
+                      <a name = "lux.struct.Queue:isFull"></a>
                       <h3 class="text-primary">
-                        obj:isFull&nbsp;()
+                        lux.struct.Queue:isFull&nbsp;()
                       </h3>
                     </dt>
                     <dd>
@@ -322,9 +328,9 @@
                     </dd>
                     <div class="row" style="height:2em"></div>
                     <dt>
-                      <a name = "obj:push"></a>
+                      <a name = "lux.struct.Queue:push"></a>
                       <h3 class="text-primary">
-                        obj:push&nbsp;(item, ...)
+                        lux.struct.Queue:push&nbsp;(item, ...)
                       </h3>
                     </dt>
                     <dd>
@@ -364,9 +370,9 @@
                     </dd>
                     <div class="row" style="height:2em"></div>
                     <dt>
-                      <a name = "obj:pop"></a>
+                      <a name = "lux.struct.Queue:pop"></a>
                       <h3 class="text-primary">
-                        obj:pop&nbsp;(n)
+                        lux.struct.Queue:pop&nbsp;(n)
                       </h3>
                     </dt>
                     <dd>
@@ -395,9 +401,9 @@
                     </dd>
                     <div class="row" style="height:2em"></div>
                     <dt>
-                      <a name = "obj:popAll"></a>
+                      <a name = "lux.struct.Queue:popAll"></a>
                       <h3 class="text-primary">
-                        obj:popAll&nbsp;()
+                        lux.struct.Queue:popAll&nbsp;()
                       </h3>
                     </dt>
                     <dd>
@@ -412,9 +418,9 @@
                     </dd>
                     <div class="row" style="height:2em"></div>
                     <dt>
-                      <a name = "obj:popEach"></a>
+                      <a name = "lux.struct.Queue:popEach"></a>
                       <h3 class="text-primary">
-                        obj:popEach&nbsp;()
+                        lux.struct.Queue:popEach&nbsp;()
                       </h3>
                     </dt>
                     <dd>
