--- a/examples/some.lua.html
+++ b/examples/some.lua.html
@@ -153,6 +153,12 @@
                             some.lua
                           </a>
                         </li>
+                        <li
+                          >
+                          <a href="../examples/some51.lua.html">
+                            some51.lua
+                          </a>
+                        </li>
                     </ul>
                   </li>
             </ul>
@@ -191,8 +197,6 @@
 <pre>
 
 <span class="global">package</span>.path = <span class="global">package</span>.path .. <span class="string">";./lib/?.lua"</span>
-
-<span class="global">require</span> <span class="string">'lux.macro.takeover'</span>
 
 <span class="keyword">local</span> <span class="global">print</span> = <span class="global">print</span>
 
