--- a/examples/some51.lua.html
+++ b/examples/some51.lua.html
@@ -85,7 +85,7 @@
                           </a>
                         </li>
                         <li
-                          class="active">
+                          >
                           <a href="../modules/lux.color.html">
                             lux.color
                           </a>
@@ -154,7 +154,7 @@
                           </a>
                         </li>
                         <li
-                          >
+                          class="active">
                           <a href="../examples/some51.lua.html">
                             some51.lua
                           </a>
@@ -191,133 +191,69 @@
 
           <div id="content">
 
-
-              <h1>
-                lux.color
-                <small>a LUX module</small>
-              </h1>
-
-              <div class="row" style="height:2em"></div>
-
-              <p>
-                LUX&rsquo;s terminal utility module.
-                 <p>
- The terminal output functions take strings with formatted colors as
- arguments. That means sush string may have a color tag. There are three types
- of color tags: attributes, foreground and background colors. Tags must be
- given between <code> &lt; </code>and<code> ></code>. Once used, a tag remains
- active in the terminal, until some other tag overwrites it. Note that the
- color tag remains active even after the program has finished.
- </p></p>
-
-<p> <p>Atribute tags:</p>
- <ul>
-  <li><code>reset</code></li>
-  <li><code>clear</code></li>
-  <li><code>bright</code></li>
-  <li><code>dim</code></li>
-  <li><code>underscore</code></li>
-  <li><code>blink</code></li>
-  <li><code>reverse</code></li>
-  <li><code>hidden</code></li>
- </ul></p>
-
-<p> <p>Foreground color tags:</p>
- <ul>
-  <li><code>black</code></li>
-  <li><code>red</code></li>
-  <li><code>green</code></li>
-  <li><code>yellow</code></li>
-  <li><code>blue</code></li>
-  <li><code>magenta</code></li>
-  <li><code>cyan</code></li>
-  <li><code>white</code></li>
-  </ul></p>
-
-<p> <p>Background color tags:</p>
- <ul>
-  <li><code>onblack</code></li>
-  <li><code>onred</code></li>
-  <li><code>ongreen</code></li>
-  <li><code>onyellow</code></li>
-  <li><code>onblue</code></li>
-  <li><code>onmagenta</code></li>
-  <li><code>oncyan</code></li>
-  <li><code>onwhite</code></li>
-  </ul>
-              </p>
+                <h2>some51.lua</h2>
 
 
+<pre>
 
+<span class="global">package</span>.path = <span class="global">package</span>.path .. <span class="string">";./lib/?.lua"</span>
 
+<span class="global">require</span> <span class="string">'lux.portable'</span>
 
-                <h2>
-                  <a name="Functions"></a>
-                  Functions
-                </h2>
+<span class="keyword">local</span> <span class="global">print</span> = <span class="global">print</span>
+<span class="keyword">local</span> <span class="global">setfenv</span> = <span class="global">setfenv</span>
 
-                <dl class="function">
-                    <dt>
-                      <a name = "terminal.line"></a>
-                      <h3 class="text-primary">
-                        terminal.line&nbsp;(text)
-                      </h3>
-                    </dt>
-                    <dd>
-                      Print a line with formatted colors.
+<span class="keyword">local</span> class = <span class="global">require</span> <span class="string">'lux.class'</span>
 
+Example = class:new{}
 
+<span class="keyword">function</span> Example:instance (obj, attr1, attr2)
 
-                          <h4>Parameters:</h4>
-                        <ul>
-                              <li>
-                                <kbd>
-                                  <strong class="text-type">
-                                      any
-                                  </strong>
-                                  text</kbd>
-                                <p>
-                                   A string possibly containing color tags.
-                                </p>
-                                </li>
-                        </ul>
+  <span class="global">setfenv</span>(<span class="number">1</span>, obj)
 
+  <span class="keyword">local</span> x, y = <span class="number">42</span>, <span class="number">1337</span>
 
+  <span class="keyword">function</span> getXY()
+    <span class="keyword">return</span> x, y
+  <span class="keyword">end</span>
 
+  <span class="keyword">function</span> foo ()
+    <span class="global">print</span>(<span class="string">"foo"</span>, attr1, attr2)
+    x, y = x+y, x*y
+  <span class="keyword">end</span>
 
-                    </dd>
-                    <div class="row" style="height:2em"></div>
-                    <dt>
-                      <a name = "terminal.write"></a>
-                      <h3 class="text-primary">
-                        terminal.write&nbsp;(text)
-                      </h3>
-                    </dt>
-                    <dd>
-                      Writes to the standard output with formatted colors.
+<span class="keyword">end</span>
 
+<span class="keyword">function</span> Example:fromArray (array)
+  <span class="keyword">return</span> Example(<span class="global">table</span>.<span class="global">unpack</span>(array))
+<span class="keyword">end</span>
 
+obj = Example(<span class="string">'asd'</span>, <span class="string">'dsa'</span>)
+obj2 = Example:fromArray({<span class="keyword">true</span>, <span class="keyword">false</span>})
 
-                          <h4>Parameters:</h4>
-                        <ul>
-                              <li>
-                                <kbd>
-                                  <strong class="text-type">
-                                      any
-                                  </strong>
-                                  text</kbd>
-                                <p>
-                                   A string possibly containing color tags.
-                                </p>
-                                </li>
-                        </ul>
+obj.foo()
+obj2.foo()
 
+<span class="keyword">local</span> NotExample = class:new{}
 
+NotExample:inherit(Example)
 
+<span class="keyword">function</span> NotExample:instance (obj)
 
-                    </dd>
-                    <div class="row" style="height:2em"></div>
-                </dl>
+  <span class="global">setfenv</span>(<span class="number">1</span>, obj)
+
+  self:super(obj, {}, <span class="keyword">function</span> () <span class="keyword">end</span>)
+
+  <span class="keyword">function</span> __operator:call ()
+    <span class="global">print</span> <span class="string">"called obj"</span>
+  <span class="keyword">end</span>
+
+<span class="keyword">end</span>
+
+obj3 = NotExample()
+obj3.foo()
+obj3()</pre>
+
 
 
           </div> <!-- id="content" -->
