--- a/modules/lux.portable.html
+++ b/modules/lux.portable.html
@@ -153,6 +153,12 @@
                             some.lua
                           </a>
                         </li>
+                        <li
+                          >
+                          <a href="../examples/some51.lua.html">
+                            some51.lua
+                          </a>
+                        </li>
                     </ul>
                   </li>
             </ul>
@@ -201,64 +207,6 @@
 
 
 
-
-                <h2>
-                  <a name="Functions"></a>
-                  Functions
-                </h2>
-
-                <dl class="function">
-                    <dt>
-                      <a name = "loadWithEnv"></a>
-                      <h3 class="text-primary">
-                        loadWithEnv&nbsp;(f, env[, source])
-                      </h3>
-                    </dt>
-                    <dd>
-                      Re-loads a funcion with the given env and an optional chunk name.
-                       It is important to note that the reloaded funcion loses its closure.
-
-                          <h4>Parameters:</h4>
-                        <ul>
-                              <li>
-                                <kbd>
-                                  <strong class="text-type">
-                                      any
-                                  </strong>
-                                  f</kbd>
-                                <p>
-                                   The original function
-                                </p>
-                                </li>
-                              <li>
-                                <kbd>
-                                  <strong class="text-type">
-                                      any
-                                  </strong>
-                                  env</kbd>
-                                <p>
-                                   The new environment
-                                </p>
-                                </li>
-                              <li>
-                                <kbd>
-                                  <strong class="text-type">
-                                      any
-                                  </strong>
-                                  source</kbd>
-                                  (<em>optional</em>)
-                                <p>
-                                   The reloaded funciton chunk name
-                                </p>
-                                </li>
-                        </ul>
-
-
-
-
-                    </dd>
-                    <div class="row" style="height:2em"></div>
-                </dl>
 
 
           </div> <!-- id="content" -->
