Update doc for v0.5.0

--- a/index.html
+++ b/index.html
@@ -198,11 +198,30 @@
 
               <div class="row" style="height:2em"></div>
 
-                <p>Lua Utility eXTension is a Lua-only library compatible with Lua 5.1 through
-Lua 5.3 which provides a handful of features for everyday Lua programming that
-cannot be found in the standard library of the language.</p>
+                <p>The Lua Utility eXtension Project is a general purpose Lua distribution
+developed with both <a href="https://luarocks.org/">LuaRocks</a> and
+<a href="https://love2d.org/">LÖVE</a> compatibility in mind.</p>
 
-                <p>WIP</p>
+                <p><p>It bundles rocks on a per-project basis, injecting a local rocktree in the
+source tree. This allows LÖVE application developers to distribute their
+dependencies together with the application package, while also benefiting from
+the LuaRocks ecosystem. However, the LUX distribution is also completely
+adequate for developing non-LÖVE applications. Here&rsquo;s a quick rundown of the
+main features present in this Lua distribution:</p>
+
+<ol>
+<li>Portability with Lua 5.1 through 5.3</li>
+<li>Rock bundling on a per-project basis</li>
+<li>Bundle-aware script execution</li>
+<li>Prototype-based Object Oriented system</li>
+<li>Class-based Object Oriented system</li>
+<li>Functional programming library</li>
+<li>Macro/Template processing</li>
+<li>Unit test tools</li>
+<li>Prettified console output</li>
+</ol>
+
+</p>
 
 
           </div> <!-- id="content" -->
